--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,9 @@ max_line_length = 140
 tab_width = 4
 ij_continuation_indent_size = 8
 
+[*.yml]
+tab_width = 2
+
 [{*.kt,*.kts}]
 # Compose function naming
 ktlint_function_naming_ignore_when_annotated_with=Composable
