--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ captures
 /composeApp/google-services.json
 /iosApp/iosApp/GoogleService-Info.plist
 **/firebase-config.js
+/docker/docker-compose.yml
