--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ moleculeRuntime = "2.1.0" # https://github.com/cashapp/molecule/releases
 napier = "2.7.1" # https://github.com/AAkira/Napier/releases - 2.8.1 exists but not for JS target (May 21, 2025)
 navigationCompose = "2.8.0-alpha13" # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html
 sqlDelightVersion = "2.1.0" # https://github.com/cashapp/sqldelight/releases
-firebaseBom = "33.14.0" # https://firebase.google.com/support/release-notes/android
+firebaseBom = "33.2.0" # https://firebase.google.com/support/release-notes/android
 kotlinxCollectionsImmutable = "0.4.0" # https://github.com/Kotlin/kotlinx.collections.immutable/releases
 multiplatformSettingsNoArg = "1.3.0" # https://github.com/russhwolf/multiplatform-settings/releases
 organization = "de.felixlf" # Project specific
@@ -22,7 +22,7 @@ android-compileSdk = "36" # https://developer.android.com/tools/releases/platfor
 android-minSdk = "24" # https://developer.android.com/tools/releases/platforms
 android-targetSdk = "36" # https://developer.android.com/tools/releases/platforms
 androidx-activityCompose = "1.10.1" # https://developer.android.com/jetpack/androidx/releases/activity
-androidx-appcompat = "1.7.0" # https://developer.android.com/jetpack/androidx/releases/appcompat
+androidx-appcompat = "1.7.1" # https://developer.android.com/jetpack/androidx/releases/appcompat
 androidx-core-ktx = "1.16.0" # https://developer.android.com/jetpack/androidx/releases/core
 androidx-espresso-core = "3.6.1" # https://developer.android.com/jetpack/androidx/releases/test
 androidx-lifecycle = "2.9.0" # https://developer.android.com/jetpack/androidx/releases/lifecycle
@@ -30,30 +30,30 @@ androidx-test-junit = "1.2.1" # https://developer.android.com/jetpack/androidx/r
 android-desugar = "2.1.5" # https://maven.google.com/web/index.html#com.android.tools:desugar_jdk_libs
 compose-plugin = "1.8.1" # https://github.com/JetBrains/compose-multiplatform/releases
 junit = "4.13.2" # https://github.com/junit-team/junit4/releases
-kotlin = "2.1.21" # https://github.com/JetBrains/kotlin/releases
-compose-reload = "1.0.0-alpha10" # https://github.com/JetBrains/compose-multiplatform/releases
+kotlin = "2.2.0" # https://github.com/JetBrains/kotlin/releases
+compose-reload = "1.0.0-alpha11" # https://github.com/JetBrains/compose-multiplatform/releases
 kotlinx-coroutines = "1.10.2" # https://github.com/Kotlin/kotlinx.coroutines/releases
-kotlinx-dateTime = "0.6.0" # https://github.com/Kotlin/kotlinx-datetime/releases
-koin = "4.0.4" # https://insert-koin.io/ - 4.0.6 exists but not for JS target (May 21, 2025)
-ktor = "3.0.0" # https://github.com/ktorio/ktor/releases - 3.0.0+ supports WasmJS
+kotlinx-dateTime = "0.6.0.1" # https://github.com/Kotlin/kotlinx-datetime/releases
+koin = "4.1.0" # https://insert-koin.io/ - 4.0.6 exists but not for JS target (May 21, 2025)
+ktor = "3.2.0" # https://github.com/ktorio/ktor/releases - 3.0.0+ supports WasmJS
 # TODO: Cannot update to 5.6.0 and aboutlibraries, due the incompatibility with the Kotlin version
 gmazzoBuildConfig = "5.4.0" # https://github.com/gmazzo/gradle-buildconfig-plugin/releases
 aboutLibraries = "11.1.4" # https://github.com/mikepenz/AboutLibraries/releases
 
 sonarqubeGradlePlugin = "6.1.0.5360" # https://github.com/SonarSource/sonar-scanner-gradle/releases
-turbineVersion = "1.2.0" # https://github.com/cashapp/turbine/releases
+turbineVersion = "1.2.1" # https://github.com/cashapp/turbine/releases
 slf4j = "2.0.17" # https://www.slf4j.org/
 
-ksp = "2.1.21-2.0.1" # https://github.com/google/ksp/releases
+ksp = "2.2.0-RC3-2.0.2" # https://github.com/google/ksp/releases
 sqlDelightPlugin = "2.1.0" # https://github.com/cashapp/sqldelight/releases
-kstore = "0.9.1" # https://github.com/xxfast/KStore/releases
+kstore = "1.0.0" # https://github.com/xxfast/KStore/releases
 kotlinxSerialization = "1.8.1" # https://github.com/Kotlin/kotlinx.serialization/releases
 
 #Firebase
 firebase-kotlin = "2.1.0" # https://github.com/GitLiveApp/firebase-kotlin-sdk/releases
 google-services = "4.4.2" # https://developers.google.com/android/guides/google-services-plugin
 firebaseCrashlyticsBuildtools = "3.0.3" # https://firebase.google.com/support/release-notes/android
-foundationAndroid = "1.8.2" # https://developer.android.com/jetpack/androidx/releases/compose-foundation
+foundationAndroid = "1.8.3" # https://developer.android.com/jetpack/androidx/releases/compose-foundation
 coreKtx = "1.16.0" # https://developer.android.com/jetpack/androidx/releases/core
 
 conveyorVersion = "1.12" # https://github.com/hydraulic-software/conveyor/releases
