--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,13 +2,13 @@
 # Project specific
 appdirs = "1.4.0" # https://github.com/harawata/appdirs/releases
 arrowCore = "2.1.2" # https://github.com/arrow-kt/arrow/releases
-gson = "2.13.1" # https://search.maven.org/artifact/com.google.code.gson/gson
-haze = "1.6.4" # https://github.com/chrisbanes/haze/releases
-moleculeRuntime = "2.1.0" # https://github.com/cashapp/molecule/releases
+gson = "2.13.2" # https://search.maven.org/artifact/com.google.code.gson/gson
+haze = "1.6.10" # https://github.com/chrisbanes/haze/releases
+moleculeRuntime = "2.2.0" # https://github.com/cashapp/molecule/releases
 napier = "2.7.1" # https://github.com/AAkira/Napier/releases - 2.8.1 exists but not for JS target (May 21, 2025)
-navigationCompose = "2.8.0-alpha13" # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html
+navigationCompose = "2.9.0" # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html
 sqlDelightVersion = "2.1.0" # https://github.com/cashapp/sqldelight/releases
-firebaseBom = "33.14.0" # https://firebase.google.com/support/release-notes/android
+firebaseBom = "33.16.0" # https://firebase.google.com/support/release-notes/android - Cannot update to 34.x (KTX modules removed, incompatible with GitLive Firebase 2.1.0)
 kotlinxCollectionsImmutable = "0.4.0" # https://github.com/Kotlin/kotlinx.collections.immutable/releases
 multiplatformSettingsNoArg = "1.3.0" # https://github.com/russhwolf/multiplatform-settings/releases
 organization = "de.felixlf" # Project specific
@@ -16,44 +16,49 @@ packagename = "de.felixlf.gradingscale" # Project specific
 applicationId = "de.felixlf.gradingscale2" # Project specific
 versionCode = "1" # Project specific
 versionName = "1.0" # Project specific
+appVersion = "1.0.0" # App version for desktop distributions
+appDisplayName = "Grading Scale" # Display name for desktop apps
+desktopPackageName = "grading-scale" # Package name for desktop distributions
+mainClassName = "de.felixlf.gradingscale2.MainKt" # Main class for JVM
 java = "17" # Java version
 
-agp = "8.10.0" # https://developer.android.com/build/releases/gradle-plugin
+agp = "8.13.0" # https://developer.android.com/build/releases/gradle-plugin
 android-compileSdk = "36" # https://developer.android.com/tools/releases/platforms
-android-minSdk = "24" # https://developer.android.com/tools/releases/platforms
+android-minSdk = "26" # https://developer.android.com/tools/releases/platforms
 android-targetSdk = "36" # https://developer.android.com/tools/releases/platforms
-androidx-activityCompose = "1.10.1" # https://developer.android.com/jetpack/androidx/releases/activity
-androidx-appcompat = "1.7.0" # https://developer.android.com/jetpack/androidx/releases/appcompat
-androidx-core-ktx = "1.16.0" # https://developer.android.com/jetpack/androidx/releases/core
-androidx-espresso-core = "3.6.1" # https://developer.android.com/jetpack/androidx/releases/test
-androidx-lifecycle = "2.9.0" # https://developer.android.com/jetpack/androidx/releases/lifecycle
-androidx-test-junit = "1.2.1" # https://developer.android.com/jetpack/androidx/releases/test
+androidx-activityCompose = "1.11.0" # https://developer.android.com/jetpack/androidx/releases/activity
+androidx-appcompat = "1.7.1" # https://developer.android.com/jetpack/androidx/releases/appcompat
+androidx-core-ktx = "1.17.0" # https://developer.android.com/jetpack/androidx/releases/core
+androidx-espresso-core = "3.7.0" # https://developer.android.com/jetpack/androidx/releases/test
+androidx-lifecycle = "2.9.4" # https://developer.android.com/jetpack/androidx/releases/lifecycle
+androidx-test-junit = "1.3.0" # https://developer.android.com/jetpack/androidx/releases/test
 android-desugar = "2.1.5" # https://maven.google.com/web/index.html#com.android.tools:desugar_jdk_libs
-compose-plugin = "1.8.1" # https://github.com/JetBrains/compose-multiplatform/releases
+compose-plugin = "1.9.0" # https://github.com/JetBrains/compose-multiplatform/releases # Cannot update to 1.9.0 with Kotlin 2.2.20 due to KSP task dependency issues
+material3WindowSizeClass = "1.8.2" # https://central.sonatype.com/artifact/org.jetbrains.compose.material3/material3-window-size-class
 junit = "4.13.2" # https://github.com/junit-team/junit4/releases
-kotlin = "2.1.21" # https://github.com/JetBrains/kotlin/releases
-compose-reload = "1.0.0-alpha10" # https://github.com/JetBrains/compose-multiplatform/releases
+kotlin = "2.2.20" # https://github.com/JetBrains/kotlin/releases # Cannot update to 2.2.20 with current Compose/KSP combination
+compose-reload = "1.0.0-beta09" # https://github.com/JetBrains/compose-multiplatform/releases
 kotlinx-coroutines = "1.10.2" # https://github.com/Kotlin/kotlinx.coroutines/releases
 kotlinx-dateTime = "0.6.0" # https://github.com/Kotlin/kotlinx-datetime/releases
-koin = "4.1.0" # https://insert-koin.io/ - 4.0.6 exists but not for JS target (May 21, 2025)
-ktor = "3.0.0" # https://github.com/ktorio/ktor/releases - 3.0.0+ supports WasmJS
+koin = "4.1.1" # https://insert-koin.io/
+ktor = "3.3.0" # https://github.com/ktorio/ktor/releases
 # TODO: Cannot update to 5.6.0 and aboutlibraries, due the incompatibility with the Kotlin version
-gmazzoBuildConfig = "5.4.0" # https://github.com/gmazzo/gradle-buildconfig-plugin/releases
-aboutLibraries = "11.1.4" # https://github.com/mikepenz/AboutLibraries/releases
+gmazzoBuildConfig = "5.6.8" # https://github.com/gmazzo/gradle-buildconfig-plugin/releases
+aboutLibraries = "12.2.4" # https://github.com/mikepenz/AboutLibraries/releases
 
-sonarqubeGradlePlugin = "6.1.0.5360" # https://github.com/SonarSource/sonar-scanner-gradle/releases
-turbineVersion = "1.2.0" # https://github.com/cashapp/turbine/releases
+sonarqubeGradlePlugin = "6.3.1.5724" # https://github.com/SonarSource/sonar-scanner-gradle/releases
+turbineVersion = "1.2.1" # https://github.com/cashapp/turbine/releases
 slf4j = "2.0.17" # https://www.slf4j.org/
-ksp = "2.1.21-2.0.1" # https://github.com/google/ksp/releases
+ksp = "2.2.20-2.0.2" # https://github.com/google/ksp/releases
 sqlDelightPlugin = "2.1.0" # https://github.com/cashapp/sqldelight/releases
-kstore = "0.9.1" # https://github.com/xxfast/KStore/releases
-kotlinxSerialization = "1.8.1" # https://github.com/Kotlin/kotlinx.serialization/releases
+kstore = "1.0.0" # https://github.com/xxfast/KStore/releases
+kotlinxSerialization = "1.9.0" # https://github.com/Kotlin/kotlinx.serialization/releases
 
 #Firebase
-firebase-kotlin = "2.1.0" # https://github.com/GitLiveApp/firebase-kotlin-sdk/releases
-google-services = "4.4.2" # https://developers.google.com/android/guides/google-services-plugin
-firebaseCrashlyticsBuildtools = "3.0.3" # https://firebase.google.com/support/release-notes/android
-foundationAndroid = "1.8.2" # https://developer.android.com/jetpack/androidx/releases/compose-foundation
+firebase-kotlin = "2.1.0" # https://github.com/GitLiveApp/firebase-kotlin-sdk/releases - Cannot update due to incompatibility with Firebase BOM 34.x (requires KTX modules) and 2.3.0 missing iosX64 support
+google-services = "4.4.3" # https://developers.google.com/android/guides/google-services-plugin
+firebaseCrashlyticsBuildtools = "3.0.6" # https://firebase.google.com/support/release-notes/android
+foundationAndroid = "1.9.2" # https://developer.android.com/jetpack/androidx/releases/compose-foundation
 coreKtx = "1.16.0" # https://developer.android.com/jetpack/androidx/releases/core
 conveyorVersion = "1.12" # https://github.com/hydraulic-software/conveyor/releases
 
@@ -94,7 +99,7 @@ android-desugar = { group = "com.android.tools", name = "desugar_jdk_libs", vers
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 compose-preview-tooling = { group = "org.jetbrains.compose.ui", name = "ui-tooling", version.ref = "compose-plugin" }
-material3-window-size = { group = "org.jetbrains.compose.material3", name = "material3-window-size-class", version.ref = "compose-plugin"}
+material3-window-size = { group = "org.jetbrains.compose.material3", name = "material3-window-size-class", version.ref = "material3WindowSizeClass"}
 molecule-runtime = { module = "app.cash.molecule:molecule-runtime", version.ref = "moleculeRuntime" }
 
 # ViewModel & Coroutines
