--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,13 +33,12 @@ androidx-espresso-core = "3.7.0" # https://developer.android.com/jetpack/android
 androidx-lifecycle = "2.9.4" # https://developer.android.com/jetpack/androidx/releases/lifecycle
 androidx-test-junit = "1.3.0" # https://developer.android.com/jetpack/androidx/releases/test
 android-desugar = "2.1.5" # https://maven.google.com/web/index.html#com.android.tools:desugar_jdk_libs
-compose-plugin = "1.9.0" # https://github.com/JetBrains/compose-multiplatform/releases # Cannot update to 1.9.0 with Kotlin 2.2.20 due to KSP task dependency issues
+compose-plugin = "1.9.0" # https://github.com/JetBrains/compose-multiplatform/releases
 material3WindowSizeClass = "1.8.2" # https://central.sonatype.com/artifact/org.jetbrains.compose.material3/material3-window-size-class
 junit = "4.13.2" # https://github.com/junit-team/junit4/releases
 kotlin = "2.2.20" # https://github.com/JetBrains/kotlin/releases # Cannot update to 2.2.20 with current Compose/KSP combination
 compose-reload = "1.0.0-beta09" # https://github.com/JetBrains/compose-multiplatform/releases
 kotlinx-coroutines = "1.10.2" # https://github.com/Kotlin/kotlinx.coroutines/releases
-kotlinx-dateTime = "0.6.0" # https://github.com/Kotlin/kotlinx-datetime/releases
 koin = "4.1.1" # https://insert-koin.io/
 ktor = "3.3.0" # https://github.com/ktorio/ktor/releases
 # TODO: Cannot update to 5.6.0 and aboutlibraries, due the incompatibility with the Kotlin version
@@ -59,7 +58,6 @@ firebase-kotlin = "2.1.0" # https://github.com/GitLiveApp/firebase-kotlin-sdk/re
 google-services = "4.4.3" # https://developers.google.com/android/guides/google-services-plugin
 firebaseCrashlyticsBuildtools = "3.0.6" # https://firebase.google.com/support/release-notes/android
 foundationAndroid = "1.9.2" # https://developer.android.com/jetpack/androidx/releases/compose-foundation
-coreKtx = "1.16.0" # https://developer.android.com/jetpack/androidx/releases/core
 conveyorVersion = "1.12" # https://github.com/hydraulic-software/conveyor/releases
 
 [libraries]
@@ -71,7 +69,6 @@ arrow-optics-ksp-plugin = { module = "io.arrow-kt:arrow-optics-ksp-plugin", vers
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 haze = { module = "dev.chrisbanes.haze:haze", version.ref = "haze" }
 haze-materials = { module = "dev.chrisbanes.haze:haze-materials", version.ref = "haze" }
-kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect" }
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" } # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html#sample-project
 sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelightVersion" }
@@ -79,12 +76,10 @@ coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", 
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-common-ktx = { module = "com.google.firebase:firebase-common-ktx" }
-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
 # Tests
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVersion" }
 coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
@@ -109,12 +104,10 @@ kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-co
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 
 # Persistence
-multiplatform-settings-no-arg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "multiplatformSettingsNoArg" }
 native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelightVersion" }
 sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelightVersion" }
 sqljs-driver = { module = "app.cash.sqldelight:sqljs-driver", version.ref = "sqlDelightVersion" }
 kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
-kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
 kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
 
 # Logging
